Corrigido bug de validação na altura do usuário